--- a/card/index.html
+++ b/card/index.html
@@ -34,7 +34,7 @@
     </section>
     <footer>
         <div class="footer-text">
-            Hola!, Soy desarrollador web!, Y me encanta maquetar paginas web.
+            Hola!, Soy desarrollador web, Y me encanta programar ♥.
         </div>
     </footer>
 </div>
